[package]
name = "lr-wpan-rs-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lr-wpan-rs = { path = "../lr-wpan-rs", features = ["std", "log-04"] }
pcap-file = { version = "2.0.0" }
log = { version = "0.4.22" }
tokio = { version = "1.41.0", default-features = false, features = ["time", "test-util"] }
rand = { version = "0.9.0" }
byte = "0.2.7"
heapless = "0.8.0"
embedded-hal-async = "1.0.0"
maitake-sync = { version = "0.2.1", default-features = false }

[dev-dependencies]
test-log = "0.2.16"
tokio = { version = "1.41.0", features = ["test-util", "macros"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
pretty_assertions = "1.4.1"
