[package]
name = "lr-wpan-rs-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lr-wpan-rs = { path = "../lr-wpan-rs", features = ["std", "log-04"] }
pcap-file = { version = "2.0.0" }
log = { version = "0.4.22" }
rand = { version = "0.9.0" }
byte = "0.2.7"
heapless = "0.8.0"
embedded-hal-async = "1.0.0"
maitake-sync = { version = "0.2.1", default-features = false }
async-executor = "1.13.1"
async-channel = "2.3.1"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "executor"] }

[dev-dependencies]
test-log = "0.2.16"
pretty_assertions = "1.4.1"
futures-test = "0.3.31"
