[package]
name = "lr-wpan-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation for the IEEE 802.15.4 protocol"
homepage = "https://github.com/tweedegolf/lr-wpan-rs"
repository = "https://github.com/tweedegolf/lr-wpan-rs"
readme = "README.md"

[dependencies]
embassy-futures = { version = "0.1.1", default-features = false }
embassy-sync = { version = "0.6.2" }
maitake-sync = { version = "0.2.1", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
critical-section = "1.2.0"
embedded-hal-async = "1.0.0"

arraydeque = { version = "0.5.1", default-features = false }
heapless = "0.8.0"
micromath = "2.1.0"
byte = "0.2.7"
ccm = { version = "0.4.0", default-features = false }
cipher = { version = "0.3.0", default-features = false }

defmt = { version = "0.3.8", optional = true }
log = { version = "0.4.22", optional = true }
rand_core = "0.9.0"
derive_more = { version = "2.0.1", default-features = false, features = ["display"] }

[dev-dependencies]
rand = "0.9.0"
aes = { version = "0.7.0", default-features = false }
futures-test = "0.3.31"

[features]
default = []
std = ["critical-section/std"]
## Use [`defmt`](https://docs.rs/defmt/latest/defmt/) for logging
defmt-03 = ["dep:defmt", "heapless/defmt-03"]
## Use [`log`](https://docs.rs/log/latest/log/) for logging
log-04 = ["dep:log"]
